test-suite/tests/ui/title-string-value.stderr
error: `title` only accepts `&str` values
 --> $DIR/title-string-value.rs:5:21
  |
5 |     #[table(title = 1)]
  |                     ^
